--- a/index.html
+++ b/index.html
@@ -9,17 +9,34 @@
 <body>
     <div class="menu">
         <main>
-            <img src="buffaloblanc.webp" alt="buffalo blanc logo" style="width: 300px; border: 1px dashed black">
+            <img src="buffaloblanc.jpg" alt="buffalo blanc logo" style="width: 300px">
             <p class="established">Est. 2024</p>
             <section>
                 <h1>Early</h1>
                 <article>
-                    <p>Muffins: $4</p>
+                    <h3>Muffins: $4</h3>
                 </article>
                 <article>
-                    <p>Croissant: $5</p>
+                    <h3>Croissant: $5</h3>
                     <ul>
                         <li>butter brushed, dark chocolate drizzle, or rose hip infused local honey</li>
+                    </ul>
+                </article>
+                <article>
+                    <h3>Belgian Waffle: $9</h3>
+                    <p>3 choices...</p>
+                    <ul>
+                        <li>nutella and toasted hazelnuts</li>
+                        <li>pink pepper and local honey</li>
+                        <li>chocolate drizzle</li>
+                    </ul>
+                </article>
+                <article>
+                    <h3>Breakfast Wraps: $9</h3>
+                    <ul>
+                        <li>spanish chorizo, eggs, hash browns, cheese, and cilantro</li>
+                        <li>grilled chicken, eggs, hash browns, feta, and roasted red peppers</li>
+                        <li>roasted peppers, corn, hash browns, pico de gallo, and cilantro</li>
                     </ul>
                 </article>
             </section>
