--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <link href="index.css" rel="stylesheet"/>
 </head>
 <body>
+    <header class="container" style="position: relative;">
+        <img src="header.avif" alt="field image" class="header">
+        <h1 class="centered">MENU</h1>
+    </header>
     <div class="menu">
         <main>
             <img src="buffaloblanc.jpg" alt="buffalo blanc logo" style="width: 300px">
             <p class="established">Est. 2024</p>
-            <section>
+            <section class="menu-text">
                 <h1>Early</h1>
                 <article>
                     <h3>Muffins: $4</h3>
