--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="header.avif" alt="field image" class="header">
         <h1 class="centered">MENU</h1>
     </header>
-    <div class="menu">
+    <div class="menu" style="border-right:none">
         <main>
             <img src="buffaloblanc.jpg" alt="buffalo blanc logo" style="width: 300px">
             <p class="established">Est. 2024</p>
@@ -43,11 +43,25 @@
                         <li>roasted peppers, corn, hash browns, pico de gallo, and cilantro</li>
                     </ul>
                 </article>
+                <article>
+                    <h3>Breakfast Sandwich: $7</h3>
+                    <ul>
+                        <li>toasted English muffin with egg, cheese, and bacon or sausage</li>
+                    </ul>
+                </article>
+                <article>
+                    <h3>Buttermilk Biscuits and Country Sausage Gravy: $7</h3>
+                    <ul>
+                        <li>add egg, sausage, or bacon with extra cost</li>
+                    </ul>
+                </article>
             </section>
         </main>
         <footer>
 
         </footer>
+    </div><div class="menu" style="border-left:none">
+
     </div>
 </body>
 </html>
