--- a/index.html
+++ b/index.html
@@ -6,62 +6,160 @@
     <title>Buffalo Blanc Menu</title>
     <link href="index.css" rel="stylesheet"/>
 </head>
-<body>
+<body style="margin-top: 20px;">
     <header class="container" style="position: relative;">
         <img src="header.avif" alt="field image" class="header">
         <h1 class="centered">MENU</h1>
     </header>
-    <div class="menu" style="border-right:none">
-        <main>
-            <img src="buffaloblanc.jpg" alt="buffalo blanc logo" style="width: 300px">
-            <p class="established">Est. 2024</p>
-            <section class="menu-text">
-                <h1>Early</h1>
-                <article>
-                    <h3>Muffins: $4</h3>
-                </article>
-                <article>
-                    <h3>Croissant: $5</h3>
-                    <ul>
-                        <li>butter brushed, dark chocolate drizzle, or rose hip infused local honey</li>
-                    </ul>
-                </article>
-                <article>
-                    <h3>Belgian Waffle: $9</h3>
-                    <p>3 choices...</p>
-                    <ul>
-                        <li>nutella and toasted hazelnuts</li>
-                        <li>pink pepper and local honey</li>
-                        <li>chocolate drizzle</li>
-                    </ul>
-                </article>
-                <article>
-                    <h3>Breakfast Wraps: $9</h3>
-                    <ul>
-                        <li>spanish chorizo, eggs, hash browns, cheese, and cilantro</li>
-                        <li>grilled chicken, eggs, hash browns, feta, and roasted red peppers</li>
-                        <li>roasted peppers, corn, hash browns, pico de gallo, and cilantro</li>
-                    </ul>
-                </article>
-                <article>
-                    <h3>Breakfast Sandwich: $7</h3>
-                    <ul>
-                        <li>toasted English muffin with egg, cheese, and bacon or sausage</li>
-                    </ul>
-                </article>
-                <article>
-                    <h3>Buttermilk Biscuits and Country Sausage Gravy: $7</h3>
-                    <ul>
-                        <li>add egg, sausage, or bacon with extra cost</li>
-                    </ul>
-                </article>
-            </section>
-        </main>
-        <footer>
-
-        </footer>
-    </div><div class="menu" style="border-left:none">
-
-    </div>
+    <table>
+        <tr>
+            <td>
+                <div class="menu" style="border-right:none">
+                    <main>
+                        <img src="buffaloblanc.jpg" alt="buffalo blanc logo" style="width: 300px;">
+                        <p class="established">Est. 2024</p>
+                        <section class="menu-text">
+                            <h1>Early</h1>
+                            <article>
+                                <h3>Muffins: $4</h3>
+                            </article>
+                            <article>
+                                <h3>Croissant: $5</h3>
+                                <ul>
+                                    <li>butter brushed, dark chocolate drizzle, or rose hip infused local honey</li>
+                                </ul>
+                            </article>
+                            <article>
+                                <h3>Belgian Waffle: $9</h3>
+                                <p>3 choices...</p>
+                                <ul>
+                                    <li>nutella and toasted hazelnuts</li>
+                                    <li>pink pepper and local honey</li>
+                                    <li>chocolate drizzle</li>
+                                </ul>
+                            </article>
+                            <article>
+                                <h3>Breakfast Wraps: $9</h3>
+                                <ul>
+                                    <li>spanish chorizo, eggs, hash browns, cheese, and cilantro</li>
+                                    <li>grilled chicken, eggs, hash browns, feta, and roasted red peppers</li>
+                                    <li>roasted peppers, corn, hash browns, pico de gallo, and cilantro</li>
+                                </ul>
+                            </article>
+                            <article>
+                                <h3>Breakfast Sandwich: $7</h3>
+                                <ul>
+                                    <li>toasted English muffin with egg, cheese, and bacon or sausage</li>
+                                </ul>
+                            </article>
+                            <article>
+                                <h3>Buttermilk Biscuits and Country Sausage Gravy: $7</h3>
+                                <ul>
+                                    <li>add egg, sausage, or bacon with extra cost</li>
+                                </ul>
+                            </article>
+                        </section>
+                        
+                        <section class="menu-text"></section>
+                            <table>
+                                <tr>
+                                    <th style="width: 53%"><h1>about us ...</h1></th>
+                                    <th style="width: 47%"><h1>and more about us ...</h1></th>
+                                </tr>
+                                <tr>
+                                    <td>hours -</td>
+                                    <td>1925 2nd Avenue South</td>
+                                </tr>
+                                <tr>
+                                    <td>Monday through Friday - 6am to close</td>
+                                    <td>Great Falls, MT 59405</td>
+                                </tr>
+                                <tr>
+                                    <td>Saturday - 8am to close</td>
+                                    <td>www.buffaloblanc.com</td>
+                                </tr>
+                                <tr>
+                                    <td>Sunday - closed</td>
+                                    <td>info@buffaloblanc.com</td>
+                                </tr>
+                            </table>
+                        </section>
+                        
+                    </main>
+                </div>
+            </td>
+            <td>
+                <div class="menu" style="border-left:none;">
+                    <main>
+                        <section class="menu-text">
+                            <h1>Later</h1>
+                            <article>
+                                <h3>Creamy White Cheddar Mac and Cheese: $7</h3>
+                                <ul>
+                                    <li>topped with Parmesan bread crumbs</li>
+                                    <li>Add bacon or grilled chicken $5</li>
+                                </ul>
+                            </article>
+                            <article>
+                                <h3>Panini Grilled Sandwhiches</h3>
+                                <ul>
+                                    <li>Grilled cheese: $5</li>
+                                    <li>Chicken with roasted red pepper and Asiago cheese aioli: $12</li>
+                                </ul>
+                            </article>
+                            <article>
+                                <h3>Nachos with Cheese Sauce: $5</h3>
+                            </article>
+                            <article>
+                                <h3>Nacho Supreme: $9</h3>
+                                <ul>
+                                    <li>beef, olives, pico, sour cream, jalapeño</li>
+                                </ul>
+                            </article>
+                            <article>
+                                <h3>Pretzel with Nacho Cheese Sauce: $5</h3>
+                            </article>
+                            <article>
+                                <h3>Pizza by the Slice</h3>
+                                <ul>
+                                    <li>cheese: $4.50</li>
+                                    <li>pepperoni: $6</li>
+                                    <li>supreme: $7</li>
+                                </ul>
+                            </article>
+                            <article>
+                                <h3>Salad</h3>
+                                <ul>
+                                    <li>caesar romaine, cheese, and house toasted croutons: $10</li>
+                                    <li>green salad roasted red peppers, feta, olives, and Greek dressing: $9</li>
+                                    <li>add chicken for $5</li>
+                                </ul>
+                            </article>
+                            <article>
+                                <h3>Soup</h3>
+                                <ul>
+                                    <li>house made soups (ask about today's choices)</li>
+                                </ul>
+                                <table style="margin-left: 35px;">
+                                    <tr>
+                                        <td style="padding-right: 50px;">10 oz cup: $5</td>
+                                        <td>16 oz bowl: $9</td>
+                                    </tr>
+                                </table>
+                            </article>
+                            <h1>Last</h1>
+                            <article>
+                                <ul>
+                                    <li>ice cream</li>
+                                    <li>sorbet</li>
+                                    <li>cheesecake</li>
+                                </ul>
+                            </article>
+                        </section>
+                    </main>
+                </div>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
