--- a/index.html
+++ b/index.html
@@ -6,147 +6,181 @@
     <title>Buffalo Blanc Menu</title>
     <link href="index.css" rel="stylesheet"/>
 </head>
-<body style="margin-top: 20px;">
-    <header class="container" style="position: relative;">
+<body>
+    <!--Nav bar-->
+    <!--Menu Title-->
+    <div class="container" style="position: relative;">
         <img src="header.avif" alt="field image" class="header">
-        <h1 class="centered">MENU</h1>
-    </header>
-        <div class="menu">
-            <main>
-                <img src="buffaloblanc.jpg" alt="buffalo blanc logo" style="width: 300px;">
-                <p class="established">Est. 2024</p>
-                <section class="menu-text">
-                    <h1>Early</h1>
-                    <article>
-                        <h3>Muffins: $4</h3>
-                    </article>
-                    <article>
-                        <h3>Croissant: $5</h3>
-                        <ul>
-                            <li>butter brushed, dark chocolate drizzle, or rose hip infused local honey</li>
-                        </ul>
-                    </article>
-                    <article>
-                        <h3>Belgian Waffle: $9</h3>
-                        <p>3 choices...</p>
-                        <ul>
-                            <li>nutella and toasted hazelnuts</li>
-                            <li>pink pepper and local honey</li>
-                            <li>chocolate drizzle</li>
-                        </ul>
-                    </article>
-                    <article>
-                        <h3>Breakfast Wraps: $9</h3>
-                        <ul>
-                            <li>spanish chorizo, eggs, hash browns, cheese, and cilantro</li>
-                            <li>grilled chicken, eggs, hash browns, feta, and roasted red peppers</li>
-                            <li>roasted peppers, corn, hash browns, pico de gallo, and cilantro</li>
-                        </ul>
-                    </article>
-                    <article>
-                        <h3>Breakfast Sandwich: $7</h3>
-                        <ul>
-                            <li>toasted English muffin with egg, cheese, and bacon or sausage</li>
-                        </ul>
-                    </article>
-                    <article>
-                        <h3>Buttermilk Biscuits and Country Sausage Gravy: $7</h3>
-                        <ul>
-                            <li>add egg, sausage, or bacon with extra cost</li>
-                        </ul>
-                    </article>
-                </section>
-                <section class="menu-text"></section>
-                    <table  style="text-align: left;">
-                        <tr>
-                            <th style="width: 55%"><h1>about us ...</h1></th>
-                            <th style="width: 45%"><h1>and more about us ...</h1></th>
-                        </tr>
-                        <tr>
-                            <td>hours -</td>
-                            <td>1925 2nd Avenue South</td>
-                        </tr>
-                        <tr>
-                            <td>Monday through Friday - 6am to close</td>
-                            <td>Great Falls, MT 59405</td>
-                        </tr>
-                        <tr>
-                            <td>Saturday - 8am to close</td>
-                            <td><a href="https://www.buffaloblanc.com/">www.buffaloblanc.com</a></td>
-                        </tr>
-                        <tr>
-                            <td>Sunday - closed</td>
-                            <td><a href="mailto: info@buffaloblanc.com">info@buffaloblanc.com</a></td>
-                        </tr>
-                    </table>
-                </section>
-                
-            </main>
-        </div>
-        <div class="menu">
-            <main>
-                <section class="menu-text">
-                    <h1>Later</h1>
-                    <article>
-                        <h3>Creamy White Cheddar Mac and Cheese: $7</h3>
-                        <ul>
-                            <li>topped with Parmesan bread crumbs</li>
-                            <li>Add bacon or grilled chicken $5</li>
-                        </ul>
-                    </article>
-                    <article>
-                        <h3>Panini Grilled Sandwhiches</h3>
-                        <ul>
-                            <li>Grilled cheese: $5</li>
-                            <li>Chicken with roasted red pepper and Asiago cheese aioli: $12</li>
-                        </ul>
-                    </article>
-                    <article>
-                        <h3>Nachos with Cheese Sauce: $5</h3>
-                    </article>
-                    <article>
-                        <h3>Nacho Supreme: $9</h3>
-                        <ul>
-                            <li>beef, olives, pico, sour cream, jalapeño</li>
-                        </ul>
-                    </article>
-                    <article>
-                        <h3>Pretzel with Nacho Cheese Sauce: $5</h3>
-                    </article>
-                    <article>
-                        <h3>Pizza by the Slice</h3>
-                        <ul>
-                            <li>cheese: $4.50</li>
-                            <li>pepperoni: $6</li>
-                            <li>supreme: $7</li>
-                        </ul>
-                    </article>
-                    <article>
-                        <h3>Salad</h3>
-                        <ul>
-                            <li>caesar romaine, cheese, and house toasted croutons: $10</li>
-                            <li>green salad roasted red peppers, feta, olives, and Greek dressing: $9</li>
-                            <li>add chicken for $5</li>
-                        </ul>
-                    </article>
-                    <article>
-                        <h3>Soup</h3>
-                        <ul>
-                            <li>house made soups (ask about today's choices)</li>
-                        </ul>
-                        <table style="margin-left: 35px;">
-                            <tr>
-                                <td style="padding-right: 50px;">10 oz cup: $5</td>
-                                <td>16 oz bowl: $9</td>
-                            </tr>
-                        </table>
-                    </article>
-                    <h1>Last</h1>
-                    <article>
-                        <h3>Affogato</h3>
-                    </article>
-                </section>
-            </main>
-        </div>
+        <h1 class="centered" style="font-size: 4rem;">MENU</h1>
+    </div>
+    <!--Drinks-->
+    <div class="menu">
+        <img src="buffaloblanc.jpg" alt="buffalo blanc logo" style="width: 300px;">
+        <section class="menu-text drink-text">
+            <h1>you know...some really fun drinks!</h1>
+            <article>
+                <h3>Prairie Fire: 16 oz. - $5.95</h3>
+                <p>A double shot of espresso, steamed milk, lightly sweetened cinnamon syrup, chocolate, and a hint of cayenne pepper for a fiery kick</p>
+            </article>
+            <article>
+                <h3>Buffalo Chip: 16 oz. - $5.95</h3>
+                <p>A double shot of espresso, milk, chocolate sauce and hazelnut, topped with whipped cream and chocolate chips</p>
+            </article>
+            <article>
+                <h3>The Buff: 16 oz. - $5.95</h3>
+                <p>A double shot of espresso, steamed milk, caramel and toasted marshmallow syrup, topped with whipped cream</p>
+            </article>
+            <article>
+                <h3>Raspberry Blanc Mocha: 16 oz. - $5.95</h3>
+                <p>A double shot of espresso, steamed milk, rich white chocolate powder, raspberry syrup, and topped with whipped cream</p>
+            </article>
+            <article>
+                <h3>The Russel Roaster: 16 oz. - $5.25</h3>
+                <p>Dark roast drip coffee, a double shot of espresso, sweetened with honey and cinnamon, topped with steamed half and half</p>
+            </article>
+            <article>
+                <h3>Bison Bold Brew: 16 oz. - $5.25</h3>
+                <p>An iced Americano, a dash of almond syrup, and cream</p>
+            </article>
+            <article>
+                <h3>Mama P: 16 oz. - $5.95</h3>
+                <p>A double shot of espresso, steamed milk, butterscotch and caramel syrup with a pinch of sea salt</p>
+            </article>
+            <article>
+                <h3>Mama T: 16 oz. - $5.25</h3>
+                <p>Earl Grey Tea, honey, steamed milk, dusted with cinnamon</p>
+            </article>
+            <article>
+                <h3>Dont Knock It Til You Chai It: 16 oz. - $5.95</h3>
+                <p>Spiced chai latte with lavender flavoring, and a shot of espresso</p>
+            </article>
+            <h1>...assorted teas!</h1>
+            <article>
+                <p>Montana Gold - Night on Glacier Bay - Earl Grey (regular and decaf) - Gunpowder Green - Ginger Peach</p>
+            </article>
+        </section>
+    </div>
+    <!--Food-->
+    <div class="menu">
+        <img src="buffaloblanc.jpg" alt="buffalo blanc logo" style="width: 300px;">
+        <section class="menu-text">
+            <h1>Early</h1>
+            <article>
+                <h3>Muffins: $4</h3>
+            </article>
+            <article>
+                <h3>Croissant: $5</h3>
+                <ul>
+                    <li>butter brushed, dark chocolate drizzle, or rose hip infused local honey</li>
+                </ul>
+            </article>
+            <article>
+                <h3>Belgian Waffle: $9</h3>
+                <p>3 choices...</p>
+                <ul>
+                    <li>nutella and toasted hazelnuts</li>
+                    <li>pink pepper and local honey</li>
+                    <li>chocolate drizzle</li>
+                </ul>
+            </article>
+            <article>
+                <h3>Breakfast Wraps: $9</h3>
+                <ul>
+                    <li>spanish chorizo, eggs, hash browns, cheese, and cilantro</li>
+                    <li>grilled chicken, eggs, hash browns, feta, and roasted red peppers</li>
+                    <li>roasted peppers, corn, hash browns, pico de gallo, and cilantro</li>
+                </ul>
+            </article>
+            <article>
+                <h3>Breakfast Sandwich: $7</h3>
+                <ul>
+                    <li>toasted English muffin with egg, cheese, and bacon or sausage</li>
+                </ul>
+            </article>
+            <article>
+                <h3>Buttermilk Biscuits and Country Sausage Gravy: $7</h3>
+                <ul>
+                    <li>add egg, sausage, or bacon with extra cost</li>
+                </ul>
+            </article>
+        </section>
+        <section class="menu-text">
+            <h1>Later</h1>
+            <article>
+                <h3>Creamy White Cheddar Mac and Cheese: $7</h3>
+                <ul>
+                    <li>topped with Parmesan bread crumbs</li>
+                    <li>Add bacon or grilled chicken $5</li>
+                </ul>
+            </article>
+            <article>
+                <h3>Panini Grilled Sandwhiches</h3>
+                <ul>
+                    <li>Grilled cheese: $5</li>
+                    <li>Chicken with roasted red pepper and Asiago cheese aioli: $12</li>
+                </ul>
+            </article>
+            <article>
+                <h3>Nachos with Cheese Sauce: $5</h3>
+            </article>
+            <article>
+                <h3>Nacho Supreme: $9</h3>
+                <ul>
+                    <li>beef, olives, pico, sour cream, jalapeño</li>
+                </ul>
+            </article>
+            <article>
+                <h3>Pretzel with Nacho Cheese Sauce: $5</h3>
+            </article>
+            <article>
+                <h3>Pizza by the Slice</h3>
+                <ul>
+                    <li>cheese: $4.50</li>
+                    <li>pepperoni: $6</li>
+                    <li>supreme: $7</li>
+                </ul>
+            </article>
+            <article>
+                <h3>Salad</h3>
+                <ul>
+                    <li>caesar romaine, cheese, and house toasted croutons: $10</li>
+                    <li>green salad roasted red peppers, feta, olives, and Greek dressing: $9</li>
+                    <li>add chicken for $5</li>
+                </ul>
+            </article>
+            <article>
+                <h3>Soup</h3>
+                <ul>
+                    <li>house made soups (ask about today's choices)</li>
+                </ul>
+                <table style="margin-left: 35px;">
+                    <tr>
+                        <td style="padding-right: 50px;">10 oz. cup: $5</td><td>16 oz. bowl: $9</td>
+                    </tr>
+                </table>
+            </article>
+            <h1>Last</h1>
+            <article>
+                <h3>Affogato</h3>
+            </article>
+        </section>
+        <!--Footer-->
+        <section class="menu-text" style="display: grid; grid-template-columns: 12fr 11fr; justify-content: start;">
+            <div style="margin: 0; margin-right: 5px;">
+                <h1>about us...</h1>
+                <p>hours -</p>
+                <p>Monday through Friday - 6am to close</p>
+                <p>Saturday - 8am to close</p>
+                <p>Sunday - closed</p>
+            </div>
+            <div style="margin: 0;">
+                <h1>and more about us...</h1>
+                <p>1925 2nd Avenue South</p>
+                <p>Great Falls, MT 59405</p>
+                <a href="https://www.buffaloblanc.com/">www.buffaloblanc.com</a>
+                <a href="mailto: info@buffaloblanc.com">info@buffaloblanc.com</a>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
