--- a/index.html
+++ b/index.html
@@ -58,6 +58,27 @@
             <article>
                 <p>Montana Gold - Night on Glacier Bay - Earl Grey (regular and decaf) - Gunpowder Green - Ginger Peach</p>
             </article>
+            <h1>perhaps something a bit more normal?</h1>
+            <article>
+                <h3>traditional coffee</h3>
+                <p>Americano: 12 oz.-$3.25 16 oz.-$3.75 20 oz.-$4</p>
+                <p>Drip Coffee: 12 oz.-$3 16 oz.-$3.25 20 oz.-$3.50</p>
+                <p>Latte (with flavorings): 12 oz.-$4.25 16 oz.-$4.75 20 oz.-$5.25</p>
+                <p>Cappuccino: 12 oz.-$4.25</p>
+                <p>Mocha/White Mocha: 12 oz.-$5 16 oz.-$5.50 20 oz.-$6</p>
+                <p>Caramel Macchiato: 12 oz.-$5 16 oz.-$5.50 20 oz.-$6</p>
+                <p>Blended Cafe: 12 oz.-$4.25 16 oz.-$5 20 oz.-$5.75</p>
+            </article>
+            <h1>and...some add-ons</h1>
+            <p>Alternative Milk: $1.50 - Flavor $.75 - Whip $1 - Cold foam $2</p>
+            <h1>and...some fun lotus energy drinks</h1>
+            <article>
+                <h3>Last best lotus: 16 oz.-$5.45</h3>
+                <p>Blue Lotus, huckleberry syrup, and vanilla topped with whipped cream</p>
+            </article>
+            <article>
+                <h3>Spirit of Montana: 16 oz.-$5.45</h3>
+            </article>
         </section>
     </div>
     <!--Food-->
