--- a/index.html
+++ b/index.html
@@ -18,40 +18,41 @@
         <img src="buffaloblanc.jpg" alt="buffalo blanc logo" style="width: 300px;">
         <section class="menu-text drink-text">
             <h1>you know...some really fun drinks!</h1>
+            <h2>all 16 oz</h2>
             <article>
-                <h3>Prairie Fire: 16 oz. - $5.95</h3>
+                <h3>Prairie Fire: $5.95</h3>
                 <p>A double shot of espresso, steamed milk, lightly sweetened cinnamon syrup, chocolate, and a hint of cayenne pepper for a fiery kick</p>
             </article>
             <article>
-                <h3>Buffalo Chip: 16 oz. - $5.95</h3>
+                <h3>Buffalo Chip: $5.95</h3>
                 <p>A double shot of espresso, milk, chocolate sauce and hazelnut, topped with whipped cream and chocolate chips</p>
             </article>
             <article>
-                <h3>The Buff: 16 oz. - $5.95</h3>
+                <h3>The Buff: $5.95</h3>
                 <p>A double shot of espresso, steamed milk, caramel and toasted marshmallow syrup, topped with whipped cream</p>
             </article>
             <article>
-                <h3>Raspberry Blanc Mocha: 16 oz. - $5.95</h3>
+                <h3>Raspberry Blanc Mocha: $5.95</h3>
                 <p>A double shot of espresso, steamed milk, rich white chocolate powder, raspberry syrup, and topped with whipped cream</p>
             </article>
             <article>
-                <h3>The Russel Roaster: 16 oz. - $5.25</h3>
+                <h3>The Russel Roaster: $5.25</h3>
                 <p>Dark roast drip coffee, a double shot of espresso, sweetened with honey and cinnamon, topped with steamed half and half</p>
             </article>
             <article>
-                <h3>Bison Bold Brew: 16 oz. - $5.25</h3>
+                <h3>Bison Bold Brew: $5.25</h3>
                 <p>An iced Americano, a dash of almond syrup, and cream</p>
             </article>
             <article>
-                <h3>Mama P: 16 oz. - $5.95</h3>
+                <h3>Mama P: $5.95</h3>
                 <p>A double shot of espresso, steamed milk, butterscotch and caramel syrup with a pinch of sea salt</p>
             </article>
             <article>
-                <h3>Mama T: 16 oz. - $5.25</h3>
+                <h3>Mama T: $5.25</h3>
                 <p>Earl Grey Tea, honey, steamed milk, dusted with cinnamon</p>
             </article>
             <article>
-                <h3>Dont Knock It Til You Chai It: 16 oz. - $5.95</h3>
+                <h3>Dont Knock It Til You Chai It: $5.95</h3>
                 <p>Spiced chai latte with lavender flavoring, and a shot of espresso</p>
             </article>
             <h1>...assorted teas!</h1>
@@ -59,25 +60,25 @@
                 <p>Montana Gold - Night on Glacier Bay - Earl Grey (regular and decaf) - Gunpowder Green - Ginger Peach</p>
             </article>
             <h1>perhaps something a bit more normal?</h1>
-            <article>
-                <h3>traditional coffee</h3>
-                <p>Americano: 12 oz.-$3.25 16 oz.-$3.75 20 oz.-$4</p>
-                <p>Drip Coffee: 12 oz.-$3 16 oz.-$3.25 20 oz.-$3.50</p>
-                <p>Latte (with flavorings): 12 oz.-$4.25 16 oz.-$4.75 20 oz.-$5.25</p>
-                <p>Cappuccino: 12 oz.-$4.25</p>
-                <p>Mocha/White Mocha: 12 oz.-$5 16 oz.-$5.50 20 oz.-$6</p>
-                <p>Caramel Macchiato: 12 oz.-$5 16 oz.-$5.50 20 oz.-$6</p>
-                <p>Blended Cafe: 12 oz.-$4.25 16 oz.-$5 20 oz.-$5.75</p>
+            <article style="display:grid; grid-template-columns: 40% 10% 10% 10%;">
+                <h3>traditional coffee</h3><h3>12 oz</h3><h3>16 oz</h3><h3>20 oz</h3>
+                <p>Americano</p><p>$3.25</p><p>$3.75</p><p>$4.00</p>
+                <p>Drip Coffee</p><p>$3.00</p><p>$3.25</p><p>$3.50</p>
+                <p>Latte (with flavorings)<p>$4.25</p><p>$4.75</p><p>$5.25</p>
+                <p>Cappuccino</p><p>$4.25</p><p>n/a</p><p>n/a</p>
+                <p>Mocha/White Mocha</p><p>$5.00</p><p>$5.50</p><p>$6.00</p>
+                <p>Caramel Macchiato</p><p>$5.00</p><p>$5.50</p><p>$6.00</p>
+                <p>Blended Cafe</p><p>$4.25</p><p>$5.00</p><p>$5.75</p>
             </article>
             <h1>and...some add-ons</h1>
-            <p>Alternative Milk: $1.50 - Flavor $.75 - Whip $1 - Cold foam $2</p>
+            <p>Alternative Milk: $1.50/Flavor $.75/Whip $1/Cold foam $2</p>
             <h1>and...some fun lotus energy drinks</h1>
             <article>
-                <h3>Last best lotus: 16 oz.-$5.45</h3>
+                <h3>Last best lotus: 16 oz-$5.45</h3>
                 <p>Blue Lotus, huckleberry syrup, and vanilla topped with whipped cream</p>
             </article>
             <article>
-                <h3>Spirit of Montana: 16 oz.-$5.45</h3>
+                <h3>Spirit of Montana: 16 oz-$5.45</h3>
             </article>
         </section>
     </div>
@@ -176,7 +177,7 @@
                 </ul>
                 <table style="margin-left: 35px;">
                     <tr>
-                        <td style="padding-right: 50px;">10 oz. cup: $5</td><td>16 oz. bowl: $9</td>
+                        <td style="padding-right: 50px;">10 oz cup: $5</td><td>16 oz bowl: $9</td>
                     </tr>
                 </table>
             </article>
