--- a/index.html
+++ b/index.html
@@ -8,17 +8,27 @@
 </head>
 <body>
     <!--Nav bar-->
+    <div class="nav-bar" id="nav-bar">
+        <ul>
+            <li>
+                <a href="buffaloblanc.com"><img src="buffaloblanc.jpg" alt="buffaloblanc logo" style="width: 90px; margin: 10px auto 10px 45px;"></a>
+            </li>
+            <li style="float:right;">
+                <img id="information-icon" src="information-icon.jfif" alt="information-icon" title="Designed by Brayden Taylor" style="width: 30px; margin: 15px;">
+            </li>
+        </ul>
+    </div>
     <!--Menu Title-->
     <div class="container" style="position: relative;">
         <img src="header.avif" alt="field image" class="header">
-        <h1 class="centered" style="font-size: 3rem;">MENU</h1>
+        <h1 class="centered" style="font-size: 2rem;">MENU</h1>
     </div>
     <!--Drinks-->
     <div class="menu">
         <img src="buffaloblanc.jpg" alt="buffalo blanc logo" style="width: 300px;">
         <section class="menu-text">
             <h1 style="margin-bottom: -1rem;">you know&#x2026; some really fun drinks!</h1>
-            <h2 style="text-align: right;">16 oz</h2>
+            <h2 style="text-align: right;">16oz</h2>
             <!--Specialty-->
             <div class="drink-grids">
                 <article>
@@ -75,7 +85,7 @@
             <div>
                 <h1>perhaps something a bit more normal?</h1>
                 <article class="grid-p" style="display: grid; grid-template-columns: 55% 15% 15% 15%;">
-                    <h3 style="padding-right: 30px;">traditional coffee</h3><h3>12 oz</h3><h3>16 oz</h3><h3>20 oz</h3>
+                    <h3 style="padding-right: 30px;">traditional coffee</h3><h3>12oz</h3><h3>16oz</h3><h3>20oz</h3>
                     <p>Americano</p><p>$3.25</p><p>$3.75</p><p>$4.00</p>
                     <p>Drip Coffee</p><p>$3.00</p><p>$3.25</p><p>$3.50</p>
                     <p>Latte (with flavorings)<p>$4.25</p><p>$4.75</p><p>$5.25</p>
@@ -94,7 +104,7 @@
             </div>
             <!--Lotus-->
             <h1 style="margin-bottom: -1rem;">and&#x2026; some fun lotus energy drinks</h1>
-            <h2 style="text-align: right;">16 oz</h2>
+            <h2 style="text-align: right;">16oz</h2>
             <div class="drink-grids">
                 <article>
                     <h3>Last best lotus</h3><h3>$5.45</h3>
@@ -238,7 +248,7 @@
                 </ul>
                 <table style="margin-left: 50px; width: 60%; max-width: 500px;">
                     <tr>
-                        <td style="width: 50%;">10 oz cup: $5.00</td><td style="width: 50%;">16 oz bowl: $9.00</td>
+                        <td style="width: 50%;">10oz cup: $5.00</td><td style="width: 50%;">16oz bowl: $9.00</td>
                     </tr>
                 </table>
             </article>
